--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,11 +7,17 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.12.4",
+    "axios": "^1.6.3",
+    "firebase": "^10.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
+    "react-otp-input": "^3.1.1",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
+    "switch": "^0.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
