--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.10.4",
     "switch": "^0.0.0",
     "web-vitals": "^2.1.4"
   },
